cockroachlabs-preview-main/docs/v23.2/int.mdx
---
title: "INT"
old_description: "CockroachDB supports various signed integer data types."
---

CockroachDB supports various signed integer [data types](/docs/v23.2/data-types).

<Note>
For instructions showing how to auto-generate integer values (e.g., to auto-number rows in a table), see [this FAQ entry](/docs/v23.2/sql-faqs#how-do-i-auto-generate-unique-row-ids-in-cockroachdb).
</Note>

## Names and Aliases

<table><thead><tr><th>Name</th><th>Allowed Width</th><th>Aliases</th><th>Range</th></tr></thead><tbody><tr><td><code>INT</code></td><td>64-bit</td><td><code>INTEGER</code><br/><code>INT8</code><br/><code>INT64</code><br/><code>BIGINT</code></td><td>-9223372036854775807 to +9223372036854775807</td></tr><tr><td><code>INT2</code></td><td>16-bit</td><td><code>SMALLINT</code></td><td>-32768 to +32767</td></tr><tr><td><code>INT4</code></td><td>32-bit</td><td>None</td><td>-2147483648 to +2147483647</td></tr><tr><td><code>INT8</code></td><td>64-bit</td><td><code>INT</code></td><td>-9223372036854775807 to +9223372036854775807</td></tr></tbody></table>

## Syntax

A constant value of type `INT` can be entered as a [numeric literal](/docs/v23.2/sql-constants#numeric-literals). For example: `42`, `-1234`, or `0xCAFE`.

## Size

The different integer types place different constraints on the range of allowable values, but all integers are stored in the same way regardless of type. Smaller values take up less space than larger ones (based on the numeric value, not the data type).

### Considerations for 64-bit signed integers

By default, `INT` is an alias for `INT8`, which creates 64-bit signed integers. This differs from the PostgreSQL default for `INT`, [which is 32 bits](https://www.postgresql.org/docs/9.6/datatype-numeric), and may cause issues for your application if it is not written to handle 64-bit integers, whether due to the language your application is written in, or the ORM/framework it uses to generate SQL (if any).

For example, JavaScript language runtimes represent numbers as 64-bit floats, which means that the JS runtime [can only represent 53 bits of numeric accuracy](http://2ality.com/2012/04/number-encoding) and thus has a max safe value of 253, or 9007199254740992. This means that the maximum size of a default `INT` in CockroachDB is much larger than JavaScript can represent as an integer. Visually, the size difference is as follows:

```text
9223372036854775807 # INT default max value
   9007199254740991 # JS integer max value
```

Given the above, if a table contains a column with a default-sized `INT` value, and you are reading from it or writing to it via JavaScript, you will not be able to read and write values to that column correctly. This issue can pop up in a surprising way if you are using a framework that autogenerates both frontend and backend code (such as [twirp](https://github.com/twitchtv/twirp)). In such cases, you may find that your backend code can handle 64-bit signed integers, but the generated client/frontend code cannot.

If your application needs to use an integer size that is different than the CockroachDB default (for these or other reasons), you can change one or both of the settings below. For example, you can set either of the below to `4` to cause `INT` and `SERIAL` to become aliases for `INT4` and `SERIAL4`, which use 32-bit integers.

1. The `default_int_size` [session variable](/docs/v23.2/set-vars).
2. The `sql.defaults.default_int_size` [cluster setting](/docs/v23.2/cluster-settings).

<Tip>
If your application requires arbitrary precision numbers, use the [`DECIMAL`](/docs/v23.2/decimal) data type.
</Tip>

<Note>
Use [`ALTER ROLE ALL SET {sessionvar} = {val}`](/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users) instead of the `sql.defaults.*` [cluster settings](/docs/v23.2/cluster-settings). This allows you to set a default value for all users for any [session variable](/docs/v23.2/set-vars) that applies during login, making the `sql.defaults.*` cluster settings redundant.
</Note>

## Examples

```sql
> CREATE TABLE ints (a INT PRIMARY KEY, b SMALLINT);
```

```sql
> SHOW COLUMNS FROM ints;
```

```text
  column_name | data_type | is_nullable | column_default | generation_expression |  indices  | is_hidden
--------------+-----------+-------------+----------------+-----------------------+-----------+------------
  a           | INT8      |    false    | NULL           |                       | {primary} |   false
  b           | INT2      |    true     | NULL           |                       | {primary} |   false
(2 rows)
```

```sql
> INSERT INTO ints VALUES (1, 32);
```

```sql
> SELECT * FROM ints;
```

```text
  a | b
----+-----
  1 | 32
(1 row)
```

## Supported casting and conversion

`INT` values can be [cast](/docs/v23.2/data-types#data-type-conversions-and-casts) to any of the following data types:

<table><thead><tr><th>Type</th><th>Details</th></tr></thead><tbody><tr><td><code>DECIMAL</code></td><td>––</td></tr><tr><td><code>FLOAT</code></td><td>Loses precision if the <code>INT</code> value is larger than 2^53 in magnitude.</td></tr><tr><td><code>BIT</code></td><td>Converts to the binary representation of the integer value. If the value is negative, the sign bit is replicated on the left to fill the entire bit array.</td></tr><tr><td><code>BOOL</code></td><td><strong>0</strong> converts to <code>false</code>; all other values convert to <code>true</code>.</td></tr><tr><td><code>DATE</code></td><td>Converts to days since the Unix epoch (Jan. 1, 1970).</td></tr><tr><td><code>TIMESTAMP</code></td><td>Converts to seconds since the Unix epoch (Jan. 1, 1970).</td></tr><tr><td><code>INTERVAL</code></td><td>Converts to seconds.</td></tr><tr><td><code>STRING</code></td><td>––</td></tr></tbody></table>

## See also

- [Data Types](/docs/v23.2/data-types)
- [`FLOAT`](/docs/v23.2/float)
- [`DECIMAL`](/docs/v23.2/decimal)
